--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "moment-timezone": "^0.5.34",
     "socket.io": "^4.4.1"
   }
 }
